--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,11 @@ server {
     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA;
     ssl_prefer_server_ciphers on;
 
+     #Missing mime types
+     types  {font/truetype ttf;}
+     types  {application/font-woff woff;}
+     types  {application/font-woff2 woff2;}
+
     location / {
         try_files $uri$args $uri$args/ /index.html;
     }
